--- a/index.css
+++ b/index.css
@@ -33,6 +33,7 @@ body {
   border-radius: 6px;
   text-align: center;
   color: black;
+  position: relative;
 }
 
 .game .container .message span {
@@ -46,6 +47,72 @@ body {
 
 .game .container .message span::after {
   content: " ]";
+}
+
+.game .container .message .chooseTheLevel {
+  width: 10px;
+  height: 10px;
+  background-color: red;
+  position: absolute;
+  top: 50%;
+  right: 3%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  border-radius: 50%;
+  cursor: context-menu;
+  -webkit-animation: leftToRight linear 1s infinite;
+          animation: leftToRight linear 1s infinite;
+}
+
+@-webkit-keyframes leftToRight {
+  0,
+  100% {
+    left: 0;
+  }
+  50% {
+    right: 20px;
+  }
+}
+
+@keyframes leftToRight {
+  0,
+  100% {
+    left: 0;
+  }
+  50% {
+    right: 20px;
+  }
+}
+
+.game .container .message .menuLevels {
+  background-color: #2196f3;
+  display: none;
+  color: white;
+  position: absolute;
+  top: 100%;
+  right: -150px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  padding: 20px;
+  border-radius: 4px;
+}
+
+.game .container .message .menuLevels form {
+  width: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.game .container .message .menuLevels.show {
+  display: block;
 }
 
 .game .container .start {
@@ -148,5 +215,14 @@ body {
 
 .game .container .finish .bad {
   color: red;
+}
+
+.choix {
+  height: 100vh;
+  margin: 100px 600px;
+}
+
+.choix form input {
+  cursor: pointer;
 }
 /*# sourceMappingURL=index.css.map */
